--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -5,3 +5,4 @@
 1.0.5: Error fixed by content and added skin.js file
 1.0.6: Added filebrowser (see documentation), Added new setting option for content entries, code cleanup
 1.0.7: Deleted Uploadcare plugin, changed settings page (skin, editor width and height, toolbar), added save hotkey
+1.0.8: Bug fixed, added editor language support
