--- a/models/settings/fields.yaml
+++ b/models/settings/fields.yaml
@@ -145,3 +145,11 @@ tabs:
        span: right
        comment: If checked, Rainlab blog - Content entries will use the CKEditor.
        default: false
+
+      show_rainlab_pages_as_wysiwyg:
+       label: Use CKEditor for Rainlab Pages - Page?
+       type: switch
+       tab: Content
+       span: right
+       comment: If checked, Rainlab Pages - Page entries will use the CKEditor.
+       default: false
