--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -9,3 +9,4 @@
 1.0.9: Added Youtube plugin, Added ProEvents, ProBlog and Rainlab Static Pages to the settings page, CKeditor updated, code cleanup
 1.0.10: Code cleanup, added thank you message, security fix elfinder
 1.0.11: Update for RC
+1.0.12: Update for RC(2)
