--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -10,3 +10,4 @@
 1.0.10: Code cleanup, added thank you message, security fix elfinder
 1.0.11: Update for RC
 1.0.12: Update for RC(2)
+1.0.13: Added component for Editable plugin. See documentation
