--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -11,3 +11,4 @@
 1.0.11: Update for RC
 1.0.12: Update for RC(2)
 1.0.13: Added component for Editable plugin. See documentation
+1.0.14: Elfinder is replaced for OctoberCMS Media Manger. (Only images for now)
