Added language support

--- a/models/settings/fields.yaml
+++ b/models/settings/fields.yaml
@@ -1,135 +1,73 @@
-fields:
-    content:
-        type: hint
-        path: @/plugins/shahiemseymor/ckeditor/models/settings/_content_field.htm
-
 tabs:
     fields:
         form_width:
-            label: Width
+            label: shahiemseymor.ckeditor::lang.settings.width
             placeholder: 100%
+            default: 100%
             type: text
-            tab: Editor
+            tab: shahiemseymor.ckeditor::lang.settings.editor
             span: left
 
         form_height:
-            label: Height
-            placeholder: 100px
+            label: shahiemseymor.ckeditor::lang.settings.height
+            placeholder: 300px
+            default: 300px
             type: text
-            tab: Editor
+            tab: shahiemseymor.ckeditor::lang.settings.editor
             span: right
 
         toolbar:
-            label: Toolbar
+            label: shahiemseymor.ckeditor::lang.settings.toolbar
             type: dropdown
             options:
-                basic: Basic
-                full: Full
-            tab: Editor
+                basic: shahiemseymor.ckeditor::lang.toolbar.basic
+                full: shahiemseymor.ckeditor::lang.toolbar.full
+            tab: shahiemseymor.ckeditor::lang.settings.editor
             span: left
 
         skin:
-            label: Skin
+            label: shahiemseymor.ckeditor::lang.settings.skin
             type: dropdown
             options:
                 moono: Moono
                 october: October
-            tab: Editor
+            tab: shahiemseymor.ckeditor::lang.settings.editor
             span: right
 
         language:
-            label: Language
+            label: shahiemseymor.ckeditor::lang.settings.language
             type: dropdown
-            options:
-                af: Afrikaans
-                ar: Arabic
-                eu: Basque
-                bn: Bengali/Bangla
-                bs: Bosnian
-                bg: Bulgarian
-                ca: Catalan
-                zh-cn: Chinese Simplified
-                zh: Chinese Traditional
-                hr: Croatian
-                cs: Czech
-                da: Danish
-                nl: Dutch
-                en: English
-                en-au: English (Australia)
-                en-ca: English (Canadian)
-                en-gb: English (United Kingdom)
-                eo: Esperanto
-                et: Estonian
-                fo: Faroese
-                fi: Finnish
-                fr: French
-                fr-ca: French (Canada)
-                gl: Galician
-                ka: Georgian
-                de: German
-                el: Greek
-                gu: Gujarati
-                he: Hebrew
-                hi: Hindi
-                hu: Hungarian
-                is: Icelandic
-                it: Italian
-                ja: Japanese
-                km: Khmer
-                ko: Korean
-                lv: Latvian
-                lt: Lithuanian
-                ms: Malay
-                mn: Mongolian
-                no: Norwegian
-                nb: Norwegian Bokmal
-                fa: Persian
-                pl: Polish
-                pt-br: Portuguese (Brazil)
-                pt: Portuguese (Portugal)
-                ro: Romanian
-                ru: Russian
-                sr: Serbian (Cyrillic)
-                sr-latn: Serbian (Latin)
-                sk: Slovak
-                sl: Slovenian
-                es: Spanish
-                sv: Swedish
-                th: Thai
-                tr: Turkish
-                uk: Ukrainian
-                vi: Vietnamese
-                cy: Welsh
-            tab: Editor
+            default: en
+            tab: shahiemseymor.ckeditor::lang.settings.editor
 
         show_cms_content_as_wysiwyg:
-            label: Use CKEditor for CMS  - Content?
+            label: shahiemseymor.ckeditor::lang.show.content
             type: switch
-            tab: Content
+            tab: shahiemseymor.ckeditor::lang.plugins.tab
             span: left
-            comment: If checked, the content entries will use the CKEditor.
+            comment: shahiemseymor.ckeditor::lang.plugins.comment
             default: false
 
         show_cms_partial_as_wysiwyg:
-            label: Use CKEditor for CMS  - Partials?
+            label: shahiemseymor.ckeditor::lang.show.partials
             type: switch
-            tab: Content
+            tab: shahiemseymor.ckeditor::lang.plugins.tab
             span: right
-            comment: If checked, CMS - Partials entries will use the CKEditor.
+            comment: shahiemseymor.ckeditor::lang.plugins.comment
             default: false
 
         show_cms_layouts_as_wysiwyg:
-            label: Use CKEditor for CMS  - Layouts?
+            label: shahiemseymor.ckeditor::lang.show.layouts
             type: switch
-            tab: Content
+            tab: shahiemseymor.ckeditor::lang.plugins.tab
             span: left
-            comment: If checked, the content entries will use the CKEditor.
+            comment: shahiemseymor.ckeditor::lang.plugins.comment
             default: false
 
         show_cms_pages_as_wysiwyg:
-            label: Use CKEditor for CMS  - Pages?
+            label: shahiemseymor.ckeditor::lang.show.pages
             type: switch
-            tab: Content
+            tab: shahiemseymor.ckeditor::lang.plugins.tab
             span: right
-            comment: If checked, the content entries will use the CKEditor.
+            comment: shahiemseymor.ckeditor::lang.plugins.comment
             default: false
