--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -14,3 +14,4 @@
 1.0.14: Elfinder is replaced for OctoberCMS Media Manger. (Only images for now)
 1.0.15: Multilanguage support (Backend). Added dutch language
 1.0.16: Editor bug fix
+1.0.17: Render bug fix
