--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -15,3 +15,4 @@
 1.0.15: Multilanguage support (Backend). Added dutch language
 1.0.16: Editor bug fix
 1.0.17: Render bug fix
+1.0.18: Problem with Rainlab Markdown editor  is now solved.
